--- a/css/menu.css
+++ b/css/menu.css
@@ -5,19 +5,11 @@
 }
   body{
     font-family: Old English Text MT;
-    font-weight: 500;
-    text-decoration-color: aliceblue;
-}
+    font-weight: 100;
 
-.preface{
-  text-align: center;
-}
+  }
 
-.texte{
-  color: rgb(7, 7, 7);
-  font-size: 20px;
-  text-align: center;
-}
+
 
 /* Ajustement du fond */
 .section-bvn{
@@ -27,11 +19,10 @@
   top: 100;
   left: 100;
   opacity: 1;
-  z-index: -100;
   overflow: hidden;
 }
 .section-bvn{
-  text-align: left;
+  text-align: center;
 }
 
 .section-bvn video{
@@ -41,19 +32,27 @@
   top: 0;
   left:0;
   z-index: -100;
-  opacity: 0.5;
 }
 
 /* Placement du texte */
 .liliput{
   position: absolute;
-  top: 88%;
-  left: 70%;
+  top:50%;
+  left: 50%;
   transform: translate(-160%,-70%);
-  text-align: center;
+  text-align: left;
   transition: 1s;
 }
 
+.brobdignag{
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(60%,-70%);
+  text-align: right;
+  transition: 1s;
+
+}
 
 
 .liliput img{
@@ -64,10 +63,19 @@
   
 }
 
-
+.brobdignag img{
+  margin: auto;
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+  
+}
 .liliput :hover{
   transform: scale(1.3);
   z-index: 2;
 }
-
+.brobdignag :hover{
+  transform: scale(1.3);
+  z-index: 2;
+}
   
